--- a/IMCcorregido/bin/AndroidManifest.xml
+++ b/IMCcorregido/bin/AndroidManifest.xml
@@ -5,12 +5,13 @@
     android:versionName="1.0" >
 
     <uses-sdk
-        android:minSdkVersion="8"
+        android:minSdkVersion="11"
         android:targetSdkVersion="21" />
 
     <application
         android:allowBackup="true"
-        android:icon="@drawable/ic_launcher"
+        android:icon="@drawable/pic3"
+        android:logo="@drawable/pic3"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
